feat(load_templatejson): 添加节配置和页眉页脚设置功能- 新增配置文档节的功能，包括奇偶页设置和域代码插入 - 添加页眉页脚设置功能，支持不同格式和样式 - 更新常量文件，增加新的页码样式和对齐方式 - 修改列表样式设置函数，优化样式名称和应用逻辑

--- a/load_templatejson/word_template_config (1).json
+++ b/load_templatejson/word_template_config (1).json
@@ -16,7 +16,7 @@
         "NameAscii": "Times New Roman",
         "NameOther": "Times New Roman",
         "Bold": false,
-        "Size": 30,
+        "Size": 16,
         "Italic": false,
         "Underline": false,
         "Color": "#000000"
@@ -85,9 +85,27 @@
       }
     }
   ],
-  "header": "",
-  "footer": "",
-  "pageNumber": "none",
+  "header": {
+    "font": "宋体",
+    "size": 25,
+    "color": "#000000",
+    "bold": false,
+    "italic": false,
+    "borderStyle": "7",
+    "borderWidth": 4,
+    "primaryText": "chapter",
+    "evenText": "西安电子科技大学"
+  },
+  "footer": {
+    "pageNumber": "none",
+    "primaryText": "",
+    "evenText": ""
+  },
+  "section": {
+    "differentOddEven": true,
+    "linkSections": false,
+    "breakType": 5
+  },
   "pageSize": "A4",
   "orientation": "portrait",
   "margins": {
