--- a/load_templatejson/word_template_config(2).json
+++ b/load_templatejson/word_template_config(2).json
@@ -16,7 +16,7 @@
         "NameAscii": "Times New Roman",
         "NameOther": "Times New Roman",
         "Bold": false,
-        "Size": 30,
+        "Size": 16,
         "Italic": false,
         "Underline": false,
         "Color": "#000000"
@@ -85,9 +85,27 @@
       }
     }
   ],
-  "header": "",
-  "footer": "",
-  "pageNumber": "none",
+  "header": {
+    "font": "宋体",
+    "size": 12,
+    "color": "#000000",
+    "bold": false,
+    "italic": false,
+    "borderStyle": "24",
+    "borderWidth": 36,
+    "primaryText": "123123123",
+    "evenText": "123123123"
+  },
+  "footer": {
+    "pageNumber": "none",
+    "primaryText": "",
+    "evenText": ""
+  },
+  "section": {
+    "differentOddEven": false,
+    "linkSections": false,
+    "breakType": 2
+  },
   "pageSize": "A4",
   "orientation": "portrait",
   "margins": {
