--- a/load_templatejson/word_template_config(3).json
+++ b/load_templatejson/word_template_config(3).json
@@ -16,10 +16,10 @@
         "NameAscii": "Times New Roman",
         "NameOther": "Times New Roman",
         "Bold": false,
-        "Size": 30,
+        "Size": 16,
         "Italic": false,
         "Underline": false,
-        "Color": "#000000"
+        "Color": "#ff0000"
       },
       "ParagraphFormat": {
         "RightIndent": 0,
@@ -85,9 +85,50 @@
       }
     }
   ],
-  "header": "",
-  "footer": "",
-  "pageNumber": "none",
+  "header": {
+    "font": "宋体",
+    "size": 12,
+    "color": "#000000",
+    "bold": false,
+    "italic": false,
+    "borderStyle": "0",
+    "borderWidth": 8,
+    "primaryText": "chapter",
+    "evenText": "chapter"
+  },
+  "footer": {
+    "pageNumber": null,
+    "pageNumberSync": false,
+    "preface": {
+      "style": 0,
+      "alignment": 1
+    },
+    "main": {
+      "sectionStart": 1,
+      "style": 0,
+      "alignment": 1
+    },
+    "toc": {
+      "style": 0,
+      "alignment": 1
+    },
+    "font": {
+      "nameFarEast": "宋体",
+      "nameAscii": "Times New Roman",
+      "size": 12,
+      "color": "#000000"
+    },
+    "paragraph": {
+      "alignment": 1
+    },
+    "primaryText": "",
+    "evenText": ""
+  },
+  "section": {
+    "differentOddEven": false,
+    "linkSections": false,
+    "breakType": 2
+  },
   "pageSize": "A4",
   "orientation": "portrait",
   "margins": {
