feat(load_templatejson): 实现目录插入功能并优化文档设置
- 新增 insert_contents 函数用于插入目录
- 创建 load_templatejson_set_all 函数统一处理所有设置- 更新 load_template_from_json 函数，改用新逻辑
-优化 configure_document_headers 和 configure_document_footers 函数
- 新增 word_template_config(页码测试).json 配置文件

--- a/load_templatejson/word_template_config(页码测试).json
+++ b/load_templatejson/word_template_config(页码测试).json
@@ -87,17 +87,40 @@
   ],
   "header": {
     "font": "宋体",
-    "size": 25,
+    "size": 12,
     "color": "#000000",
     "bold": false,
     "italic": false,
     "borderStyle": "7",
     "borderWidth": 4,
     "primaryText": "chapter",
-    "evenText": "西安电子科技大学"
+    "evenText": "xiandianz"
   },
   "footer": {
-    "pageNumber": "none",
+    "pageNumber": null,
+    "pageNumberSync": false,
+    "preface": {
+      "style": 1,
+      "alignment": 1
+    },
+    "main": {
+      "sectionStart": 1,
+      "style": 0,
+      "alignment": 1
+    },
+    "toc": {
+      "style": 1,
+      "alignment": 1
+    },
+    "font": {
+      "nameFarEast": "宋体",
+      "nameAscii": "Times New Roman",
+      "size": 12,
+      "color": "#000000"
+    },
+    "paragraph": {
+      "alignment": 1
+    },
     "primaryText": "",
     "evenText": ""
   },
